# soil-data

./: .env.test  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docs.md  pyproject.toml  requirements.dev.txt
.github/workflows/: main.yml
demeter/: utils.py
demeter/raster/: __init__.py  depth_enum.py  polaris.py  raster.py  slga.py  utils.py
demeter/raster/sentinel2/: ndvi.py  orbits_conus.geojson
demeter/raster/sentinel2/utils/: download.py  merge.py  rasters.py  search.py  tiles.py
demeter/raster/usgs/: hydrography.py  topography.py  utils.py
demeter/raster/utils/: mask.py  merge.py  reprojection.py  transform.py
soil_data/: constants.py
soil_data/raster/: polaris.py  slga.py
soil_data/raster/sentinel2/: constants.py  ndvi.py  tiles_conus.geojson
soil_data/raster/sentinel2/utils/: download.py  merge.py  rasters.py  search.py  tiles.py
soil_data/raster/usgs/: constants.py  hydrography.py  topography.py  utils.py
tests/: conftest.py
tests/fixtures/: humboldt_park.geojson  permian_basin.geojson  tango_oscar.geojson  texas.geojson
tests/raster/: test_polaris.py  test_raster.py  test_slga.py  test_utils.py
tests/raster/fixtures/: fields_spanning_sentinel2_tiles.geojson  humboldt_park_elevation.tif  humboldt_park_fdr.tif  ndvi-utm-zone-13.tif  ndvi-utm-zone-14.tif  texas_fdr.tif  texas_west.geojson
tests/raster/fixtures/polaris/: README.md  lat4142_lon-88-87.tif  lat4243_lon-88-87.tif
tests/raster/fixtures/slga/: BDW_000_005_05_N_P_AU_TRN_N_20230607.tif  BDW_000_005_95_N_P_AU_TRN_N_20230607.tif  BDW_000_005_EV_N_P_AU_TRN_N_20230607.tif  BDW_005_015_05_N_P_AU_TRN_N_20230607.tif  BDW_005_015_95_N_P_AU_TRN_N_20230607.tif  BDW_005_015_EV_N_P_AU_TRN_N_20230607.tif  BDW_015_030_05_N_P_AU_TRN_N_20230607.tif  BDW_015_030_95_N_P_AU_TRN_N_20230607.tif  BDW_015_030_EV_N_P_AU_TRN_N_20230607.tif  PHW_000_005_05_N_P_AU_TRN_N_20220520.tif  PHW_000_005_95_N_P_AU_TRN_N_20220520.tif  PHW_000_005_EV_N_P_AU_TRN_N_20222005.tif  PHW_005_015_05_N_P_AU_TRN_N_20220520.tif  PHW_005_015_95_N_P_AU_TRN_N_20220520.tif  PHW_005_015_EV_N_P_AU_TRN_N_20220520.tif  PHW_015_030_05_N_P_AU_TRN_N_20220520.tif  PHW_015_030_95_N_P_AU_TRN_N_20220520.tif  PHW_015_030_EV_N_P_AU_TRN_N_20220520.tif  SOC_000_005_05_N_P_AU_TRN_N_20220727.tif  (+8 more)
tests/raster/sentinel2/: test_ndvi.py
tests/raster/usgs/: test_hydrography.py  test_topography.py
tests/raster/utils/: test_mask.py  test_merge.py  test_reprojection.py
(+26 files in other folders)
